--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Olá mundo!</h1>
+    <h2>Meu nome é João Pedro Ianke Barbosa de Lima</h2>
+    <p>Tenho 19 anos e sou estudante de Análise e Desenvolvimento de Sistemas na Fasipe.</p>
+    <p>Estou no terceiro semestre do curso e estou animado para aprender mais sobre desenvolvimento de software.</p>
+    <p>Além dos estudos, gosto de jogar videogames, assistir séries e filmes, e passar tempo com meus amigos e família.</p>
+    <p>Estou ansioso para compartilhar minha jornada acadêmica e minhas paixões com vocês!</p>
 </body>
 </html>
